refactor: 스레드에 안전한 리스트로 변경